# sam

./: .gitmodules  LICENSE  README.md  SAM.cabal
sam-soc/: README.md  Setup.hs  sam-soc.cabal
sam-soc/src/Control/Distributed/: SAMSoc.hs
sam-soc/src/Control/Distributed/SAM/: NewSimpleLocalnet.hs
sam-stm/: CHANGELOG.md  LICENSE  README.md  Setup.hs  sam-stm.cabal
sam-stm/src/Control/Distributed/: SAMSTM.hs
sam-stm/src/Control/Distributed/SAM/: NewSimpleLocalnet.hs
src/Control/Distributed/: SAM.hs
src/Control/Distributed/SAM/: NewSimpleLocalnet.hs
