Name:          SAM
Version:       0.1.1
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     (c) Pusan National University Programming Language Laboratory, 2017-2018
Author:        Yeoneo Kim, HyungJun An, Sugwoo Byun, Gyun Woo
Maintainer:    Yeoneo Kim <yeoneo@pusan.ac.kr>
Stability:     experimental
Homepage:      http://pllab.pusan.ac.kr
Bug-Reports:   pllab@pusan.ac.kr
Synopsis:      Simple Actor Model for ManyCores
Description:   Simple actor model for manycore (SAM) is a parallel programming model for manycore environments.
               SAM provides a scalability and coding efficiency on the manycore environment. This package guarantees a scalability that using the Cloud Haskell on local node. And using this package, you can do map-style programming in parallel program development. Since using SAM can easily write parallel programs in manycore environment, it is not only suitable for beginners of parallel programming but also appropriate for programmers who develop applications in manycore environment.

Tested-With:   GHC==8.4.1
Category:      Control

Source-Repository head
  Type:     git
  Location: https://github.com/oslab-swrc/sam

Library
  Build-Depends:     base >= 4.4 && < 5,
                     bytestring >= 0.9 && < 0.11,
                     network >= 2.3 && < 2.7,
                     network-multicast >= 0.1.1 && < 0.3,
                     data-accessor >= 0.2 && < 0.3,
                     binary >= 0.6.3 && < 0.9,
                     containers >= 0.4 && < 0.6,
                     transformers >= 0.2 && < 0.6,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network-transport-tcp >= 0.4 && < 0.7,
                     distributed-process >= 0.5.0 && < 0.8,
                     distributed-process-simplelocalnet ==  0.2.4,
                     system-argv0,
                     system-filepath,
                     exceptions,
                     process,
                     split,
                     unix,
                     template-haskell

  Exposed-modules:   Control.Distributed.SAM,
                     Control.Distributed.SAM.NewSimpleLocalnet

  Extensions:        TemplateHaskell
  CPP-Options:       -DTemplateHaskellSupport

  ghc-options:       -Wall 
  HS-Source-Dirs:    src
